Added crawler performance chart

--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -3,3 +3,5 @@
 <br/>
 <%= area_chart @daily_repos, title: 'Repositories processed daily', colors: %w[#bd0 #666], thousands: "," %>
 <%= area_chart @repositories, title: 'Cumulative repositories processed', curve: false, thousands: "," %>
+<br/>
+<%= line_chart @performance.map {|name, data| {name:, data:}}, title: 'Surfer performance', ytitle: "Time, sec"%>
